[gd_scene load_steps=4 format=3 uid="uid://lk3g8g6myah2"]

[ext_resource type="PackedScene" uid="uid://grljyoauhhtn" path="res://Core/Scenes/database/custom_list.tscn" id="1_1gsb4"]
[ext_resource type="Script" path="res://Core/gui/BoxDB/box_entities.gd" id="1_u07jm"]
[ext_resource type="PackedScene" uid="uid://bqk3n33rqfdbm" path="res://Core/Scenes/database/entities/info_entities.tscn" id="2_fdx10"]

[node name="BoxEntities" type="HBoxContainer"]
script = ExtResource("1_u07jm")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="top" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="SearchForEntities" type="LineEdit" parent="HSplitContainer/top"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "SEARCH"

[node name="CharList" parent="HSplitContainer/top" instance=ExtResource("1_1gsb4")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddCharacter" type="Button" parent="HSplitContainer/top"]
unique_name_in_owner = true
layout_mode = 2
text = "ADD_NEW_CHARACTER"

[node name="content" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="infoEntities" parent="HSplitContainer/content" instance=ExtResource("2_fdx10")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_stretch_ratio = 1.0
